--- a/stylesheets/manifest.css
+++ b/stylesheets/manifest.css
@@ -344,6 +344,16 @@ button.hamburger {
   .contact-details .number {
     color: #616161;
     font-size: 0.92857em; }
+  .contact-details .ismuted {
+    position:absolute;
+    top:2px;
+    right:2px;
+    height: 16px;
+    width: 16px;
+    background-size: 16px 16px;
+    background-repeat: no-repeat;
+  }
+
 
 .recipients-input {
   position: relative; }
