--- a/stylesheets/_ios.scss
+++ b/stylesheets/_ios.scss
@@ -32,6 +32,11 @@ $ios-border-color: rgba(0,0,0,0.1);
       background: $grey_l;
     }
   }
+
+  .selected .contact-details .ismuted.muted {
+    @include color-svg('/images/do_not_disturb.svg', white);
+  }
+
   .tool-bar {
     float: left;
     padding: 15px;
